# text-escaper

./: README.md  pyproject.toml  requirements.txt
pyinstaller/: UniScape.spec
scripts/: as-unicode.py  with-unicode.py
snap/: snapcraft.yaml
snap/gui/: uniscape.desktop  uniscape.gui.desktop
src/: app.py  cli.py  esc.py  uniscape.kv
src/uniscape/: app.py  cli.py  esc.py
